further link & font styling

--- a/_posts/2011-08-03-test-post.textile
+++ b/_posts/2011-08-03-test-post.textile
@@ -3,6 +3,6 @@ layout: post
 title: Lorem Ipsum
 date: August 5th, 2011
 ---
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris volutpat accumsan lobortis. Maecenas consequat laoreet lorem, quis ultrices erat faucibus sit amet. Cras facilisis, mi sed vulputate cursus, erat nunc dignissim dolor, id ullamcorper urna tellus ac justo. Nulla facilisi. Nullam cursus elementum laoreet. Nam interdum felis sit amet libero scelerisque vitae consequat orci consequat. Praesent urna ipsum, porta id congue non, convallis eleifend odio. Phasellus et semper quam. Maecenas et nisi elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mi augue, egestas eget convallis eu, placerat et erat. Donec id leo dictum massa interdum pharetra. Nullam vel libero ut nibh egestas interdum. Duis eleifend turpis ac orci pulvinar vulputate. Maecenas consequat, lectus non condimentum feugiat, nunc nisi auctor est, quis condimentum elit arcu pharetra lorem. Suspendisse malesuada pharetra nulla. Nullam nisl purus, feugiat quis consequat et, interdum eget risus. Pellentesque quis nunc neque, in dictum lorem.
+Lorem ipsum dolor sit amet, "consectetur adipiscing":http://test.com elit. Mauris volutpat accumsan lobortis. Maecenas consequat laoreet lorem, quis ultrices erat faucibus sit amet. Cras facilisis, mi sed vulputate cursus, erat nunc dignissim dolor, id ullamcorper urna tellus ac justo. Nulla facilisi. Nullam cursus elementum laoreet. Nam interdum felis sit amet libero scelerisque vitae consequat orci consequat. Praesent urna ipsum, porta id congue non, convallis eleifend odio. Phasellus et semper quam. Maecenas et nisi elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mi augue, egestas eget convallis eu, placerat et erat. Donec id leo dictum massa interdum pharetra. Nullam vel libero ut nibh egestas interdum. Duis eleifend turpis ac orci pulvinar vulputate. Maecenas consequat, lectus non condimentum feugiat, nunc nisi auctor est, quis condimentum elit arcu pharetra lorem. Suspendisse malesuada pharetra nulla. Nullam nisl purus, feugiat quis consequat et, interdum eget risus. Pellentesque quis nunc neque, in dictum lorem.
 
 Praesent eget mattis tellus. Proin volutpat velit orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris at posuere quam. In rutrum ipsum vel tortor elementum laoreet. Cras accumsan, erat dignissim interdum dignissim, nunc elit faucibus tortor, a tristique lorem lacus ut ligula. Etiam sagittis hendrerit tellus. Cras felis ante, adipiscing suscipit aliquet congue, condimentum quis metus. Integer massa diam, interdum at congue in, facilisis vel lectus. Proin interdum rhoncus pellentesque. Etiam elementum velit sed purus pulvinar vehicula. Quisque tincidunt odio vitae orci ultricies pretium. Praesent cursus enim non nisi commodo eleifend. Nunc vel nibh nec lacus blandit suscipit non vitae dolor. Sed neque elit, venenatis ut dapibus eu, mattis eu dolor. Donec sed ipsum eget ante gravida rhoncus. Phasellus sed elit arcu.
