--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-This is the source and data for my site.
-========================================
-It's powered by Jekyll.
+== This is the source and data for my site.
+It's powered by {"Jekyll"}["http://jekyllrb.com"].
 
-License
-=======
+== License
 The following directories are copyright Steve Jackson:
 
-  * _posts/
-  * images/
+* _posts/
+* images/
+
+If you want to learn from or use the code - go for it!
