--- a/_posts/2011-08-19-jekyll.textile
+++ b/_posts/2011-08-19-jekyll.textile
@@ -1,10 +1,43 @@
 ---
 layout: post
-title: Building a blog with Jekyll
+title: Running with Jekyll
 date: August 18, 2011
 ---
-Running with Jekyll
 
-This is some quick test text.
+So here we are: you're looking at my new site, built on {"Jekyll"}[https://github.com/mojombo/jekyll], the famed blogging platform for hackers. I'm sufficiently impressed. I'll skim over a bit of what I used to build this for anyone interested.
+
+After doing the basic install, I set up a {"git repo"}[https://github.com/stevejackson/sjackson.net] to host my code. This is one of biggest appeals of Jekyll: you're not stuffing your blog posts into a database; they're saved conveniently in a readable, and writable, markdown format (of your choice) anywhere you'd like.
+
+Next I threw together my go-to deployment hack: a rakefile or some other wrapper to wrap an rsync command.
+
+{% highlight ruby %}
+task :deploy do
+  sh %{rsync -avz --delete _site/ myserver:/my/app/location/on/server/}
+end
+
+task :server do
+  sh %{jekyll --server --auto}
+end
+{% endhighlight %}
+
+Nice and easy, that's how we like it.
+
+h2. This is some quick test text.
 
 Some more text.
+
+
+outline:
+* site created w/ jekyll, links to jekyll
+* process of getting it set up
+* rake/rsync
+* typekit
+* stuff I used:
+** typekit
+** html5reset
+** jQuery
+** SASS
+** jquery.twitter
+** fancybox
+** jquery.kwicks
+* saucelabs
